--- a/index.html
+++ b/index.html
@@ -24,13 +24,29 @@
       scroll-behavior: smooth;
     }
 
+    /* Add smooth transitions for images and buttons */
+    .hero-images img, .tag-btn, .cta-right {
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
+    }
+
+    .hero-images img:hover {
+      transform: scale(1.07) rotate(-2deg);
+      box-shadow: 0 8px 24px rgba(0,0,0,0.18);
+    }
+
+    .tag-btn:hover, .cta-right:hover {
+      transform: scale(1.08);
+      box-shadow: 0 4px 16px rgba(210,105,30,0.18);
+    }
+
     /* Hero Section */
     .hero {
-      background: #0d2b59;
-      color: white;
-      padding: 2rem;
-      position: relative;
-      clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
+  background: #0d2b59;
+  color: white;
+  padding: 3rem 1.5rem 2.2rem 1.5rem; /* Medium top and bottom padding */
+  min-height: 470px; /* Medium hero section height */
+  position: relative;
+  clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
     }
 
     /* Header bar */
@@ -52,14 +68,15 @@
     }
 
     .tag-btn {
-      background: #d2691e;
-      color: white;
-      padding: 0.6rem 1.2rem;
-      border-radius: 5px;
-      border: none;
-      cursor: pointer;
-      font-weight: bold;
-      transition: background 0.3s ease;
+  background: #d2691e;
+  color: white;
+  padding: 1rem 2rem;
+  border-radius: 7px;
+  border: none;
+  cursor: pointer;
+  font-weight: bold;
+  font-size: 1.2rem;
+  transition: background 0.3s ease;
     }
 
     .tag-btn:hover {
@@ -68,10 +85,11 @@
 
     /* Hero content */
     .hero-content {
-      display: flex;
-      justify-content: space-between;
-      align-items: flex-start;
-      flex-wrap: wrap;
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  flex-wrap: wrap;
+  gap: 2rem;
     }
 
     .hero-text {
@@ -81,14 +99,14 @@
     }
 
     h1 {
-      font-size: 2.2rem;
+  font-size: 1.2rem; /* Make hero heading noticeably smaller */
       margin: 0 0 1rem;
     }
 
     p {
-      font-size: 1rem;
-      line-height: 1.5;
-      margin-bottom: 2rem;
+  font-size: 1.25rem; /* Make hero paragraph larger */
+  line-height: 1.5;
+  margin-bottom: 2rem;
     }
 
     /* CTA container */
@@ -133,23 +151,27 @@
 
     /* Right images */
     .hero-images {
-      flex: 1;
-      display: flex;
-      gap: 1rem;
-      justify-content: flex-end;
-      flex-wrap: wrap;
-      margin-top: 2rem;
+  flex: 1;
+  display: flex;
+  gap: 1rem;
+  justify-content: flex-end;
+  flex-wrap: wrap;
+  margin-top: 2rem;
+  flex-direction: row;
+  overflow-x: auto;
     }
 
     .hero-images img {
-      width: 220px;
-      border-radius: 5px;
-      object-fit: cover;
+  width: 220px;
+  border-radius: 5px;
+  object-fit: cover;
+  max-width: 100%;
+  height: auto;
     }
 
     /* Info Section */
     .info-section {
-      padding: 3rem 2rem;
+  padding: 2rem 2rem;
       text-align: center;
       max-width: 800px;
       margin: 0 auto;
@@ -162,9 +184,9 @@
     }
 
     .info-section p {
-      font-size: 1.1rem;
-      line-height: 1.6;
-      color: #333;
+  font-size: 1rem; /* Make info section text smaller */
+  line-height: 1.6;
+  color: #333;
     }
 
     /* Responsive */
@@ -173,15 +195,48 @@
         flex-direction: column;
         align-items: center;
         text-align: center;
+        gap: 1.5rem;
       }
 
       .hero-text {
         margin-right: 0;
         margin-bottom: 2rem;
+        max-width: 100%;
       }
 
       .hero-images {
         justify-content: center;
+        flex-direction: column;
+        align-items: center;
+        gap: 1.5rem;
+        overflow-x: visible;
+      }
+
+      .hero-images img {
+        width: 100%;
+        max-width: 350px;
+        height: auto;
+        box-sizing: border-box;
+      }
+      .cta-box {
+        flex-direction: column;
+        max-width: 100%;
+      }
+      .hero-content {
+        gap: 1rem;
+      }
+      .hero-images img {
+        width: 100%;
+        max-width: 220px;
+        height: auto;
+        box-sizing: border-box;
+      }
+      h1 {
+        font-size: 1rem;
+      }
+      .tag-btn {
+        font-size: 1rem;
+        padding: 0.7rem 1.2rem;
       }
     }
   </style>
@@ -191,8 +246,8 @@
     <!-- Header bar -->
     <div class="hero-header">
       <div class="logo">
-        <img src="https://via.placeholder.com/40x40" alt="Logo">
-        <span>charity: water</span>
+  <!-- Logo image for charity: water -->
+  <img src="img/cw_logo-2.png" alt="Charity Water Logo">
       </div>
       <button class="tag-btn" onclick="document.getElementById('info').scrollIntoView()">Fuel Clean Water</button>
     </div>
@@ -205,14 +260,17 @@
         <p>Join charity: water and see exactly how your support brings clean water to communities—one project, one life at a time.</p>
         <div class="cta-box">
           <div class="cta-left">SEE YOUR IMPACT</div>
-          <div class="cta-right" onclick="document.getElementById('info').scrollIntoView()">Start A Water Project Today</div>
+          <div class="cta-right" onclick="document.getElementById('info').scrollIntoView()">Donate Today</div>
         </div>
       </div>
 
       <!-- Right Side Images -->
       <div class="hero-images">
-        <img src="https://via.placeholder.com/220x280" alt="Project Image">
-        <img src="https://via.placeholder.com/220x280" alt="Water Image">
+  <div style="width:100%; display:flex; flex-direction:row; align-items:center; justify-content:center; gap:1rem; margin-top:-30px;">
+          <img src="img/eyJidWNrZXQiOiJkcm9wbWFyayIsImtleSI6IjUyMDQzLzFiOTA2MDZmZTg2OTU4NWFhNGE3M2ZlZjJkNTgyNzQzNTQ0Yzg1Mzk4ZjcyNWZkOTQ1N2FhY2I2MDAwNmFhMzIvcHJldmlldy8wMjA3X0V0aGlvcGlhXzIwMTlfQ0ctLmpwZyIsImVkaXRzIjp7InJlc2l6ZSI6eyJ3aWR0aC.jpg" alt="Community Project" style="width:220px; border-radius:5px; object-fit:cover;">
+          <img src="img/eyJidWNrZXQiOiJkcm9wbWFyayIsImtleSI6IjUyMDQzLzllNjBlYWRiODc0MTczNGE0NjQ3NGI3MGE0MTE3ZjAyOTRiOGEyNDQwZDJiY2ExNDJjNjg0OGE2Y2JmOTM5M2EvcHJldmlldy80NTQ4X0V0aGlvcGlhXzIwMTlfQ0ctLmpwZyIsImVkaXRzIjp7InJlc2l6ZSI6eyJ3aWR0aC.jpg" alt="Drilling Team" style="width:220px; border-radius:5px; object-fit:cover;">
+        </div>
+          <img src="https://via.placeholder.com/220x280" alt="">
       </div>
     </div>
   </section>
