--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
 
   <!-- Info Section -->
   <section id="info" class="info-section">
-    <h2>Why Clean Water Matters</h2>
+  <h2 style="color:#4FCB53;">Why Clean Water Matters</h2>
     <p>Clean water changes everything. It improves health, boosts education, and empowers communities to thrive. By joining our mission, you're not only funding wells, but also creating sustainable futures for generations to come.</p>
   </section>
 </body>
